# GNL

./: GNL.xml  other.xml  updates.xml  vim_settings.xml
Clion/: CMakeLists.txt  a.out  author  get_next_line.c  get_next_line.h  main.c  test  test2
Clion/libft/: Makefile  ft_memalloc.c  ft_realloc.c  ft_strcpy.c  ft_strlen.c  ft_strnjoin.c  libft.h
